@@ -4,10 +4,7 @@ APT
   {
 	"^firmware-linux.*";
 	"^linux-firmware$";
-	"^linux-image.*";
 	"^kfreebsd-image.*";
-	"^linux-restricted-modules.*";
-	"^linux-ubuntu-modules-.*";
 	"^gnumach$";
 	"^gnumach-image.*";
   };
