@@ -7,6 +7,7 @@ etc/apt/apt.conf.d
 etc/apt/preferences.d
 etc/apt/sources.list.d
 etc/apt/trusted.gpg.d
+etc/kernel/postinst.d
 etc/logrotate.d
 var/cache/apt/archives/partial
 var/lib/apt/lists/partial
